2008-02-11  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* cgi/kahua.cgi.in (cgi-error-proc): use current-error-page instead of default-error-page.

2008-02-10  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/http.scm (current-error-page): add.
	(kahua.protocol.http): use kahua.config.
	(kahua.protocol.http): export current-error-apge instead of default-error.page.

	* test/config.scm ("error-document-alist"): use ".page" instead of ".html".

	* test/test.conf (<kahua-config>): use ".page" for error document's extention, because it is text tree, it is not html.

	* test/config.scm ("error-document-alist"): add.
	("error-document 404"): add.
	("error-document 500"): add.
	("error-document 503"): add.

	* test/test.conf (<kahua-config>): add :error-document-ailst

	* src/kahua/config.scm.in (kahua.config): use util.list (assoc-ref)
	(kahua.config): export kahua-error-document-alist, kahua-error-document
	(<kahua-custom>): add slot 'error-document-alist
	(define-kahua-config-accessor): add error-document-alist
	(kahua-error-document): add.

2007-12-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: emacs/kahua.el.in
	  Display result evaluated by sending from kahua-mode buffer
	  in mini-buffer when *kahua-shell* buffer isn't displayed
	  in any window.  This patch from Kiyoka Nishiyama. Tnx a lot.

2007-12-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-keyserv.scm, src/kahua-server.scm
	  Flush explicitly stdout when they tell their worker-id to
	  kahua-spvr, because of change in Gauche CVS HEAD
	  (src/port.c r1.147).

2007-11-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm
	  Lack of sup/, sup:, big/ and big:(exported but not exist).

2007-10-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: cgi/kahua.cgi.in
	  Fix the bug that the parameter "cgi-metavariables" is useless
	  to get alist of metavariables in pure CGI script.  This fix
	  depends on "sys-environ->alist", so now Kahua requires Gauche