@@ -1,3 +1,13 @@
+2008-02-12  Katsutoshi Itoh <cut-sea@kahua.org>
+
+	* Change: src/kahua/server.scm
+	  Partially update node(html parts).
+	  patch for %a/cont-handler,%form/cont-handler.
+	  and add local-parts like as local-cont procedure.
+	* Add: test/multi-paging.kahua
+	       test/multi-paging.scm
+	  add test code for a/cont,form/cont's new attribute('parts-cont').
+
 2008-02-11  ENDO Yasuyuki  <yasuyuki@javaopen.org>
 
 	* cgi/kahua.cgi.in (cgi-error-proc): use current-error-page instead of default-error-page.
